--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -92,4 +91,12 @@ header {
 
 .download-btn:hover {
   background: #218838;
+}
+
+.category-title {
+  font-size: 24px;
+  margin-bottom: 15px;
+  margin-top: 40px;
+  color: #1e1e2f;
+  text-align: center;
 }
