--- a/style.css
+++ b/style.css
@@ -141,3 +141,11 @@ footer {
   font-size: 14px;
   box-shadow: 0 -4px 10px rgba(0,0,0,0.2);
 }
+
+
+.divider {
+  height: 60px;
+  background: linear-gradient(to right, #00e676, #1de9b6);
+  margin: 60px 0;
+  border-radius: 8px;
+}
