--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Urbanist', sans-serif;
   background: #f7f7f7;
   color: #333;
   padding: 20px;
