--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   background: #f7f7f7;
   color: #333;
   padding: 20px;
